package model;

public interface GestionUsers {
    /**
     * Inicion de sesión
     */
    default void login() {
        // TODO
    }

    /**
     * Inicion de sesión
     */
    default void addUser() {
        // TODO
    }

    /**
     * Inicion de sesión
     */
    default void deleteUser() {
        // TODO
    }

    /**
     * Inicion de sesión
     */
    default void searchUser() {
        // TODO
    }

    /**
     * Inicion de sesión
     */
    default void updateUser() {
        // TODO
    }

    /**
     * Inicion de sesión
     */
    default void modName() {
        // TODO
    }

    /**
     * Inicion de sesión
     */
    default void modPassw() {
        // TODO
    }

}
