package model;

import java.time.LocalDate;

public class History {
    private String description;
    private LocalDate date;
    private User user;


    
    public String getDescription() {
        return description;
    }
    public LocalDate getDate() {
        return date;
    }

    

}

